crates/uitest/fixtures/ty_check/where_const_predicate_trait_method.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/where_const_predicate_trait_method.fe
---
error[8-0082]: where clause const predicate failed
   ┌─ where_const_predicate_trait_method.fe:31:5
   │
31 │     Checker::check<Small>()
   │     ^^^^^^^^^^^^^^^^^^^^^ const predicate evaluated to `false`
